# weconnect-api-gw

./: .env  .gitignore  README.md  patch_app_only.diff  patch_git_format.diff  patch_rest.diff  pyproject.toml  routines_checker.py
.git_old/: FETCH_HEAD  ORIG_HEAD  config  index
.git_old/logs/: HEAD
.git_old/logs/refs/heads/: backup-full-history  main
.git_old/logs/refs/heads/feature/: replace_sql
.git_old/objects/pack/: pack-16bfd24d6a00f2c69cc9ba5d0071ba766e71d9f0.idx  pack-16bfd24d6a00f2c69cc9ba5d0071ba766e71d9f0.pack  pack-16bfd24d6a00f2c69cc9ba5d0071ba766e71d9f0.rev
.git_old/refs/heads/feature/: replace_sql
app/: main.py
app/agent/: deps.py  simple_agent.py  tool_executor.py
app/api/: chat.py  dependencies.py  upload.py
app/db/: async_session.py  eval_async_session.py  rag_async_session.py  system_async_session.py
app/embeddings/: __init__.py  client.py
app/evaldb/: __init__.py  repository.py
app/ingest/: __init__.py  chunker.py  ingest_checker.py  ingest_text.py  normalize.py  pdf_loader.py  repository.py  text_normalizer.py
app/llm/: base.py  gemini_client.py  openai_client.py  types.py
app/logging/: access_log.py
app/mcp/: client.py
app/rag_clients/: base.py  dummy.py  external_rag.py  factory.py  pgvector_rag.py
app/scripts/: backfill_embeddings_768.py
app/systemdb/: base.py  models.py  session.py
app/tenant/: resolver.py
db/: evaldb_schema.sql  logdb_schema.sql  logdb_seed.sql  ragdb_schema.sql  ragdb_schema_update.sql  ragdb_seed.sql  systemdb_schema.sql  systemdb_seed.sql
mcp_server/: registry.py  schemas.py  server.py
