[project]
name = "ai-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn",
  "sqlalchemy",
  "psycopg2-binary",
  "httpx",
  "python-dotenv",
  "openai",
  "sentence-transformers>=3.0.0",
  "pypdf>=6.5.0",
  "python-multipart>=0.0.21",
  "asyncpg>=0.31.0",
  "pgvector>=0.4.2",
  "sentencepiece>=0.2.1",
  "tiktoken>=0.12.0",
  "protobuf>=7.34.0",
]

[tool.uv]
